[Edward] Removed unnecessary styles off of bootstrap stylesheet because of selector limitation on IE9.
Change-Id: If59a0230735a64d2ffe5103ed84d2339e6365398

--- a/static/css/bootstrap-quest.scss
+++ b/static/css/bootstrap-quest.scss
@@ -6,12 +6,12 @@
 @import "../bootstrap/custom/font-face";
 // Reset and dependencies
 @import "../bootstrap/custom/normalize";
-@import "../bootstrap/partials/print";
+//@import "../bootstrap/partials/print";
 @import "../bootstrap/partials/glyphicons";
 // Core CSS
 @import "../bootstrap/custom/scaffolding";
 @import "../bootstrap/custom/type";
-@import "../bootstrap/partials/code";
+//@import "../bootstrap/partials/code";
 @import "../bootstrap/partials/grid";
 @import "../bootstrap/custom/custom-grid-ext";
 @import "../bootstrap/partials/tables";
