--- a/static/bootstrap/custom/_buttons.scss
+++ b/static/bootstrap/custom/_buttons.scss
@@ -115,19 +115,19 @@
 }
 
 // Info appears as blue-green
-.btn-info {
+/*.btn-info {
 	@include button-variant($btn-info-color, $btn-info-bg, $btn-info-border);
-}
+}*/
 
 // Warning appears as orange
-.btn-warning {
+/*.btn-warning {
 	@include button-variant($btn-warning-color, $btn-warning-bg, $btn-warning-border);
-}
+}*/
 
 // Danger and error appear as red
-.btn-danger {
+/*.btn-danger {
 	@include button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
-}
+}*/
 
 // Link buttons
 // -------------------------
