Fixed stylesheet not referencing ajax-loader.gif correctly.
Change-Id: I72cb87e986a35e08291c2ded532ef65fbde037d2

--- a/static/bootstrap/widgets/_slick.scss
+++ b/static/bootstrap/widgets/_slick.scss
@@ -2,7 +2,7 @@
 
 $slick-font-path: "./fonts/" !default;
 $slick-font-family: "icon-ui" !default;
-$slick-loader-path: "./" !default;
+$slick-loader-path: "/images/shared/" !default;
 //$slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
