--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -410,12 +410,6 @@ i.menu-indicator {
 			}
 		}
 	}
-	&.well {
-		padding: 0px;
-	}
-	.menu-container {
-		position: relative;
-	}
 	.footer-top-section {
 		position: relative;
 		z-index: 0;
@@ -442,10 +436,6 @@ i.menu-indicator {
 				padding: 0;
 				font-size: 12px;
 			}
-		}
-		i.glyphicon-triangle-bottom {
-			font-size: 12px;
-			margin-left: 4px;
 		}
 	}
 	.footer-bottom-section {
@@ -645,11 +635,11 @@ i.menu-indicator {
 					}
 					> span {
 						> i {
-							color: $top-search-btn-hover-bg;
+							color: $text-orange;
 						}
 						> span {
 							i {
-								color: $top-search-btn-hover-bg;
+								color: $text-orange;
 								&:before {
 									content: "\e253";
 								}
