--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -115,7 +115,7 @@ i.nav-arrow:before {
 		}
 		a {
 			margin: 0;
-			padding: 22px 9px;
+			padding: 22px 15px;
 			color: $top-link;
 			display: block;
 			cursor: pointer;
@@ -135,7 +135,7 @@ i.nav-arrow:before {
 		.badge {
 			position: absolute;
 			top: 14px;
-			left: 15px;
+			left: 13px;
 			width: 14px;
 			height: 14px;
 			display: inline-block;
@@ -201,12 +201,6 @@ i.nav-arrow:before {
 		background-color: $top-search-bg;
 		@include box-shadow(0 4px 5px 0 rgba(97, 95, 95, 0.49));
 		border-top: 3px solid $top-search-top-border-color;
-		input[type=text] {
-			border: 1px solid $top-search-input-border-color;
-			font-size: 15px;
-			padding: 5px 50px 5px 20px;
-			width: 80%;
-		}
 		input:focus {
 			border-color: $link-color;
 			outline: 0;
@@ -224,7 +218,11 @@ i.nav-arrow:before {
 			padding-left: 14px;
 			padding-left: 4px;
 			margin-bottom: 0;
-			height: auto;
+			height: 33px;
+			border: 1px solid $top-search-input-border-color;
+			font-size: 15px;
+			padding: 5px 50px 5px 20px;
+			width: 80%;
 		}
 		.btn {
 			font-size: 20px;
@@ -570,7 +568,11 @@ i.menu-indicator {
 		}
 		.search-container {
 			input[type=text] {
-				width: 92%;
+				width: 100%;
+			}
+			.btn {
+				margin-left: 0;
+				right: 15px;
 			}
 		}
 		.input-group {
@@ -603,6 +605,7 @@ i.menu-indicator {
 		}
 	}
 	#country-selector {
+		border-bottom: 1px solid #eee;
 		> div {
 			display: none;
 		}
@@ -640,16 +643,19 @@ i.menu-indicator {
 					border-bottom: none;
 					background: $footer-li-xs-open-bg;
 					border-top: 1px solid #aaa;
+					+ li {
+						border-top: 0;
+					}
 					> ul {
 						border-bottom: 1px solid $footer-xs-border-top-color;
 					}
 					> span {
 						> i {
-							color: $top-search-btn-hover-bg;
+							color: $text-orange;
 						}
 						> span {
 							i {
-								color: $top-search-btn-hover-bg;
+								color: $text-orange;
 								&:before {
 									content: "\e253";
 								}
@@ -657,9 +663,16 @@ i.menu-indicator {
 						}
 					}
 				}
+				&:last-child {
+					/*border-bottom: 1px solid $footer-li-xs-border-bottom-color;*/
+					&.open {
+						border-bottom: 1px solid #aaa;
+					}
+				}
 			}
 			a {
 				font-size: 14px;
+				padding-left: 15px;
 			}
 			i.glyphicon-triangle-bottom {
 				float: right;
@@ -671,9 +684,6 @@ i.menu-indicator {
 			font-size: 11px;
 			span {
 				padding-left: 10px;
-			}
-			&:last-child {
-				border: none;
 			}
 		}
 	}
@@ -1322,7 +1332,7 @@ i.menu-indicator {
 					li:hover > ul {
 						position: absolute;
 						left: 280px;
-						top: 0;
+						top: -3px;
 						width: 280px;
 						//Siamak
 						background: #fff;
@@ -1335,29 +1345,13 @@ i.menu-indicator {
 						}
 					}
 				}
-
-				&.tier3 li {
-					&.subLinks {
-						border-top: 1px solid transparent;
-						border-bottom: 1px solid transparent;
-						border-right: 1px solid transparent;
-					}
-					&:hover > ul {
-						position: absolute;
-						left: 279px;
-						top: 0;
-
-						background: #fff;
-						padding: 0;
-					}
-				}
 				&.tier3, &.tier4 {
-					margin-top: -3px;
 					border-top: 3px solid $nav-border-top;
 					display: none;
 					float: right;
-					min-height: 101%;
+					min-height: 100%;
 					width: auto;
+					box-sizing: content-box;
 					@include box-shadow(2px 4px 5px 0px rgba(97, 95, 95, 0.49));
 				}
 				li {
