--- a/communities/supplementary-files/formats.less
+++ b/communities/supplementary-files/formats.less
@@ -423,7 +423,7 @@
     height: 44px;
     .avatar {
       display: table-cell;
-      width: 125px;
+      width: 169px;
       margin: 0 0 0 0;
       overflow: hidden;
       border-spacing: 0px;
@@ -496,7 +496,7 @@
         position: relative;
       }
       ul {
-        width: 115px;
+        width: 250px;
         float: right;
         overflow: hidden;
         a {
@@ -514,7 +514,7 @@
           .replace_with_icon(@comment, 20px);
         }
         .bookmarks {
-          .replace_with_icon(@bookmark, 20px);
+          /*.replace_with_icon(@bookmark, 20px);*/
           &.bookmarked {
             color: @color-attention !important;
           }
@@ -536,9 +536,8 @@
         .conversations,
         .bookmarks,
         .user {
-          margin: 4px 4px 4px 4px;
-          &:before {
-          }
+          /*margin: 4px 4px 4px 4px;*/
+          margin: 0;
         }
       }
       &.site-links {
