--- a/communities/supplementary-files/icons.less
+++ b/communities/supplementary-files/icons.less
@@ -287,12 +287,12 @@
   &.book:before {
     content: @book
   }
-  &.bookmark:before {
+  /*&.bookmark:before {
     content: @bookmark
-  }
-  &.bookmarks:before {
+  }*/
+  /*&.bookmarks:before {
     content: @bookmarks
-  }
+  }*/
   &.box:before {
     content: @box
   }
