--- a/communities/bootstrap-community.scss
+++ b/communities/bootstrap-community.scss
@@ -2,16 +2,6 @@
 @import "../static/bootstrap/custom/_variables-quest";
 @import "../static/bootstrap/partials/_mixins";
 
-@font-face {
-	font-family: "Glyphicons Halflings";
-	src: url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.eot'), '#{$icon-font-path}#{$icon-font-name}.eot'));
-	src: url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.eot?#iefix'), '#{$icon-font-path}#{$icon-font-name}.eot?#iefix')) format('embedded-opentype'),
-	url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.woff2'), '#{$icon-font-path}#{$icon-font-name}.woff2')) format('woff2'),
-	url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.woff'), '#{$icon-font-path}#{$icon-font-name}.woff')) format('woff'),
-	url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.ttf'), '#{$icon-font-path}#{$icon-font-name}.ttf')) format('truetype'),
-	url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}'), '#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}')) format('svg');
-}
-
 .glyphicon {
 	position: relative;
 	top: 1px;
@@ -89,11 +79,9 @@
 #footer {
 	background-color: $footer-bg-color;
 	font-size: 14px;
-	margin-top: 30px;
+	margin-top: 10px;
 	border-top: 1px solid $footer-xs-border-top-color;
 	color: #333;
-	font-family: "Trebuchet MS", sans-serif;
-	line-height: 1.42857;
 
 	a {
 		color: $footer-link-color;
@@ -125,7 +113,6 @@
 	}
 	.footer-top-section {
 		position: relative;
-		z-index: 0;
 		a {
 			padding: 10px 0 9px 15px;
 		}
@@ -222,8 +209,6 @@
 	}
 
 	.banner.site {
-		/*left: 0;*/
-
 		.avatar {
 			img {
 				width: 100px;
@@ -347,6 +332,10 @@
 }
 
 @media (min-width: $screen-sm-min) {
+	#mobile-nav-container {
+		display: none;
+	}
+
 	.header-fragments {
 		.layout {
 			.layout-content {
@@ -371,8 +360,6 @@
 	}
 
 	.custom-main-navigation {
-		font-family: $font-family;
-
 		li {
 			float: left;
 		}
@@ -391,23 +378,71 @@
 	}
 
 	.navigation-list {
+		&.user-links {
+			li {
+				&:hover {
+					a {
+						color: $text-orange !important;
+					}
+				}
+			}
+		}
+		.logout {
+			margin-top: 10px;
+			a {
+				display: block;
+				margin-bottom: 0; // For input.btn
+				font-weight: $btn-font-weight;
+				text-align: center;
+				vertical-align: middle;
+				touch-action: manipulation;
+				cursor: pointer;
+				background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+				border: 1px solid transparent;
+				white-space: nowrap;
+				@include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $border-radius-base);
+				@include user-select(none);
+
+				&,
+				&:active,
+				&.active {
+					&:focus,
+					&.focus {
+						@include tab-focus;
+					}
+				}
+
+				&:hover,
+				&:focus,
+				&.focus {
+					color: $btn-default-color;
+					text-decoration: none;
+				}
+
+				&:active,
+				&.active {
+					outline: 0;
+					background-image: none;
+					@include box-shadow(inset 0 3px 5px rgba(0, 0, 0, .125));
+				}
+				@include button-variant-v2($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border);
+			}
+		}
 		.glyphicon {
 			font-size: 22px;
 		}
 	}
 
 	.banner.site {
-		.avatar {
-			width: 169px !important;
-		}
 		.navigation-list {
 			&.user-links {
 				a {
-					margin: 4px;
+					&.search-icon {
+						margin: 4px;
+					}
 				}
 			}
 			ul {
-				width: 150px !important;
 				a {
 					color: #333;
 				}
@@ -424,6 +459,14 @@
 				}
 				.conversations {
 					margin-top: 7px;
+				}
+				.user {
+					&.with-icon {
+						text-indent: 0;
+						&:before {
+							display: none;
+						}
+					}
 				}
 			}
 		}
@@ -467,11 +510,31 @@
 		}
 	}
 
-	.footer-fragments {
-		border-top: 1px solid #aaa;
+	.header {
+		.content-fragment {
+			&.with-spacing {
+				padding: 4px 0;
+			}
+		}
+	}
 
+	//Popup
+	.popup-list {
+		&.user {
+			font-size: 16px;
+		}
+		.multiple-column-list {
+			border: 1px solid #eee;
+			background-color: #f9f9f9;
+		}
+	}
+
+	//Footer
+
+	.footer-fragments {
 		.layout {
-			max-width: 100%;
+			max-width: 100% !important;
+			margin: 0;
 		}
 	}
 
@@ -488,16 +551,18 @@
 		}
 		.footer-top-section {
 			.menu-links {
-				display: inline-block;
-				margin: 0 auto;
-
 				> li {
-					padding: 0 9% 0 15px;
+					padding: 0 8%;
 					display: inline-block;
 					vertical-align: top;
 					> div {
 						padding: 0 0 5px;
 						font-weight: 700;
+					}
+				}
+				ul {
+					li {
+						font-size: 12px;
 					}
 				}
 			}
@@ -513,6 +578,12 @@
 			}
 		}
 		.footer-copyright-section {
+			max-width: 100%;
+			border-top: 1px solid #eee;
+			font-size: 12px;
+			ul {
+				text-align: center;
+			}
 			li {
 				border-top: 0;
 				display: inline-block;
