--- a/communities/screen.less
+++ b/communities/screen.less
@@ -7,3 +7,4 @@
 @import "supplementary-files/layouts.less";
 @import "supplementary-files/formats.less";
 @import "supplementary-files/widgets.less";
+@import "supplementary-files/custom.less";
