--- a/communities/supplementary-files/general.less
+++ b/communities/supplementary-files/general.less
@@ -1,13 +1,12 @@
 *, *:before, *:after {
   .box-sizing(border-box);
 }
-
 body {
   padding: 0px;
   margin: 0px;
   font-family: Helvetica, Arial, sans-serif;
   font-size: @font-size;
-  line-height: 120%;
+  line-height: @line-height;
   background-color: @color-background;
   color: @color-foreground;
   // allow page editing/drag dropping with touch on surface
@@ -19,7 +18,6 @@ body {
     }
   }
 }
-
 html.dragging {
   -ms-touch-action: none;
 }
@@ -35,31 +33,24 @@ h1, h2, h3, h4, h5 {
   -webkit-font-smoothing: antialiased;
   margin: 1em 0;
 }
-
 h1 {
   font-size: @font-size * 2.8;
 }
-
 h2 {
   font-size: @font-size * 2.4;
 }
-
 h3 {
   font-size: @font-size * 2;
 }
-
 h4 {
   font-size: @font-size * 1.8;
 }
-
 h5 {
   font-size: @font-size * 1.5;
 }
-
 h5 {
   font-size: @font-size * 1.2;
 }
-
 a {
   color: @color-accent - 0;
   text-decoration: none;
@@ -72,10 +63,10 @@ a {
     outline: none;
   }
   &:hover {
-    color: lighten(@color-accent, 10%);
+    color: lighten(@color-accent, 20%);
   }
   &:active {
-    color: darken(@color-accent, 10%);
+    color: darken(@color-accent, 20%);
   }
   &.read,
   &:visited {
@@ -107,7 +98,6 @@ a {
     }
   }
 }
-
 p {
   margin: 1.5em 0 1.5em 0;
   line-height: @line-height;
@@ -120,30 +110,25 @@ p {
     margin-bottom: 0;
   }
 }
-
 ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
 }
-
 fieldset {
   padding: 0px;
   margin: 0px;
   border: 0px;
 }
-
 input, select {
   &:focus {
     outline: none;
   }
 }
-
 img {
   max-width: 100%;
   height: auto;
 }
-
 embed, object, video, audio {
   max-width: 100%;
 }
@@ -235,7 +220,6 @@ embed, object, video, audio {
 .composer-mentionable-mention-highlight {
   background-color: #D8DFEA;
 }
-
 .composer-mentionable-selector {
   position: absolute;
   background-color: #fff;
@@ -274,7 +258,6 @@ embed, object, video, audio {
     }
   }
 }
-
 .mentionable-suggestion {
   display: block;
   position: relative;
@@ -297,7 +280,6 @@ embed, object, video, audio {
 .composer-hashtag-highlight {
   background-color: #fef9c1;
 }
-
 .composer-hashtag-selector {
   position: absolute;
   background-color: #fff;
