--- a/communities/supplementary-files/layouts.less
+++ b/communities/supplementary-files/layouts.less
@@ -299,7 +299,7 @@ html, body, form:first-child {
 
 .footer-fragments {
   min-height: 100px;
-  border-top: 1px solid darken(@color-background, 10%);
+  border-top: 1px solid #aaa;
   > .layout {
     .width;
   }
