--- a/static/bootstrap/widgets/_simple-pagination.scss
+++ b/static/bootstrap/widgets/_simple-pagination.scss
@@ -3,32 +3,31 @@
 // --------------------------------------------------
 
 .pager {
+  padding-left: 0;
   margin: 0;
+  list-style: none;
+  text-align: center;
+  @include clearfix;
 
   li {
+    display: inline;
     vertical-align: 0;
 
-    > a {
+    > a,
+    > span {
+      display: inline-block;
       padding: 6px 12px;
       background-color: $pager-link-bg;
       border: 1px solid $pager-border-color;
       border-radius: 1px;
     }
+    a:hover,
     a:active,
     a:focus {
-      -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125)
-    }
-    .icon-ui-arrowleft:before,
-    .icon-ui-arrowright:before {
-      position: relative;
-      top: 2px !important;
-    }
-    .icon-ui-arrowleft:before {
-      content: "\e600";
-    }
-    .icon-ui-arrowright:before {
-      content: "\e601";
+      text-decoration: none;
+      background-color: $pager-hover-bg;
+      /*-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125)*/
     }
     input[type=text] {
       margin-left: 5px;
@@ -45,6 +44,16 @@
       background: none;
       border: 0;
       border-radius: 0;
+    }
+  }
+  .disabled {
+    > a,
+    > a:hover,
+    > a:focus,
+    > span {
+      color: $pager-disabled-color;
+      background-color: $pager-bg;
+      cursor: $cursor-disabled;
     }
   }
 }
