--- a/communities/supplementary-files/widgets.less
+++ b/communities/supplementary-files/widgets.less
@@ -2019,7 +2019,7 @@ li.activity-story.content-type-293f75d1-2a3e-43ed-9173-af885c593139 {
           padding: 0px;
           border: 0px;
           font-size: .9 * @font-size;
-          color: lighten(@color-foreground, 35%);
+          color: @color-foreground;
           margin-right: 2 * @spacing;
           background-color: transparent;
           &:hover {
