fixed reminding bugs for header/footer (TFS : 23742)
Change-Id: Ifd9ec73c07ccc2646f18ff3b34b194bebaef737c

--- a/static/bootstrap/custom/quest/_custom-header-footer-sm-quest.scss
+++ b/static/bootstrap/custom/quest/_custom-header-footer-sm-quest.scss
@@ -60,7 +60,7 @@
 		.utility {
 			width: auto;
 			a {
-				padding: 22px 15px;
+				padding: 22px 9px;
 			}
 			[class^=icon] {
 				font-size: 18px;
@@ -187,32 +187,17 @@
 						height: auto;
 						font-weight: normal;
 						overflow: visible;
-						&:hover {
-							/*background: #999999;
-							color: #333333;*/
-						}
 						&.subLinks {
 							position: initial;
 							&:hover {
 								background: #fff;
-
-								/*border-top: 1px solid #cce7f3;
-								border-bottom: 1px solid #cce7f3;
-								background: -moz-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: -webkit-gradient(linear, left top, right top, color-stop(0%, #f9f9f9), color-stop(100%, #fff));
-								background: -webkit-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: -o-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: -ms-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: linear-gradient(to right, #f9f9f9 0%, #fff 100%);
-								&:first-child {
-									border-top: 1px solid transparent;
-								}*/
 							}
 						}
 					}
 					> li {
 						display: block;
 						background: #fff;
+						border-left: 1px solid #eee;
 						i.menu-indicator {
 							color: #007db8;
 						}
@@ -221,12 +206,6 @@
 						width: 92%;
 					}
 					li:hover > ul {
-						position: absolute;
-						left: 280px;
-						top: 0;
-						width: 280px;
-						background: #fff;
-						padding: 0;
 						li {
 							display: block;
 							a {
@@ -235,33 +214,21 @@
 						}
 					}
 				}
-
-				&.tier3 li {
-					&.subLinks {
-						border-top: 1px solid transparent;
-						border-bottom: 1px solid transparent;
-						border-right: 1px solid transparent;
-					}
-					&:hover > ul {
-						position: absolute;
-						left: 280px;
-						top: 0;
-						background: #fff;
-						padding: 0;
-					}
-				}
 				&.tier3, &.tier4 {
-					margin-top: -3px;
+					position: absolute;
+					left: 280px;
+					top: -3px;
+					margin-top: 0;
+					box-sizing: content-box;
 					border-top: 3px solid $nav-border-top;
 					display: none;
 					float: right;
-					min-height: 101%;
-					width: auto;
+					min-height: 100%;
+					width: 280px;
+					background: #fff;
+					padding: 0;
 					@include box-shadow(2px 4px 5px 0px rgba(97, 95, 95, 0.49));
 
-				}
-				&.tier4 {
-					min-height: 100.7%;
 				}
 				li {
 					cursor: pointer;
