added new variables for tfs : 23718
Change-Id: Ib689d022a392b6fecb76c9b359f25bdf23e3370b

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -39,6 +39,7 @@ $natural-gray: #aaaaaa;
 $light-gray: #eeeeee;
 $text-green: #3E831C;
 $body-color: $darker-gray;
+$text-light-blue: #016a9c;
 
 //== Scaffolding
 /* Start:Global */
