--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -45,7 +45,7 @@ $color-image-border: #737373;
 
 $text-blue: $dell-blue;
 $text-dark-blue: $dell-dark-blue;
-
+$text-light-blue: $text-blue;
 /* DemandBase Colors */
 
 $color-demandbase-dropdown-background: #c0c0c0;
